# boost_playground

./: .gitignore  CMakeLists.txt
graph/: boost_adaptor.h  entities.h  inc_boost_adaptor.h
py_tests/: test_parent_child.py  test_playground.py
pyapi/: pyapi.cpp
src/: CMakeLists.txt  binary_visitor.h  keeping_reference.cpp  keeping_reference.h  my_class.cpp  my_class.h  parent_child.cpp  parent_child.h  virtual_stuff.h
test/: CMakeLists.txt  model_networks.h  test_binary_visitor.cpp  test_boost_graph.cpp  test_network.cpp  test_virtual.cpp
